Atualização do Mapa de Navegação

--- a/navegacao.html
+++ b/navegacao.html
@@ -3,11 +3,11 @@
     
 <head>
     <meta charset="UTF-8">
-    <title> Wireframe HTML</title>
+    <title> Mapa de navegação HTML</title>
 </head>
 <body>
     <figure>
-        <img src= "Imagens/wireframe.jpg" alt="wireframe" />                                                                       
+        <img src= "Imagens/mapa.jpg" alt="wireframe" />                                                                       
     </figure>    
 </body>
 </html>
