Atualização do wireframe

--- a/wireframe.html
+++ b/wireframe.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <figure>
-        <img src= "Imagens/wireframe.jpg" alt="wireframe" />                                                                       
+        <img src= "Imagens/wireframe.png" alt="wireframe" />                                                                       
     </figure>    
 </body>
 </html>
